# monkey

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version.hpp.in
.github/workflows/: build.yml  ci.yml  test.yml
Lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
eval/: builtins.hpp  evaluator.cpp  evaluator.hpp  object.cpp  object.hpp
lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
parser/: ast.cpp  ast.hpp  parser.cpp  parser.hpp
repl/: repl.cpp
tests/: ast_test.cpp  evaluator_test.cpp  lexer_test.cpp  parser_test.cpp
